--- a/SweeTron/SweeTron/SweeTron/Web.config
+++ b/SweeTron/SweeTron/SweeTron/Web.config
@@ -68,6 +68,7 @@
   </system.codedom>
   <connectionStrings>
     <add name="SweeTronEntities" connectionString="metadata=res://*/Models.SweeTronDB.csdl|res://*/Models.SweeTronDB.ssdl|res://*/Models.SweeTronDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-SREE5M5;initial catalog=SweeTron;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SweeTronEntities1" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-0NTKP6K;initial catalog=SweeTron;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
