--- a/SweeTron/SweeTron/SweeTron/SweeTron.csproj
+++ b/SweeTron/SweeTron/SweeTron/SweeTron.csproj
@@ -182,6 +182,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="css\Contact.css" />
     <Content Include="css\HomePage.css" />
     <Content Include="css\site.css" />
     <Content Include="favicon.ico" />
