--- a/SweeTron/SweeTron/SweeTron/SweeTron.csproj
+++ b/SweeTron/SweeTron/SweeTron/SweeTron.csproj
@@ -184,6 +184,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="css\Contact.css" />
     <Content Include="css\HomePage.css" />
+    <Content Include="css\Receita.css" />
     <Content Include="css\site.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
